# cmake_demo

./: .gitignore  CMakeLists.txt  README.md
app1/: CMakeLists.txt  main.cpp
app2/: CMakeLists.txt  main.cpp
libhello/: CMakeLists.txt
libhello/include/libhello/: libhello.h
libhello/src/: hello.cpp  hello.h  libhello.cpp  world.cpp  world.h
libprinter/: CMakeLists.txt
libprinter/include/libprinter/: libprinter.h
libprinter/src/: libprinter.cpp
